<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_flash_on"
        android:title="@string/action_connect" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit" />

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/action_duplicate" />

    <item
        android:id="@+id/action_wol"
        android:icon="@drawable/ic_power"
        android:title="@string/action_wake_on_lan" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete" />

</menu>
